// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="2a8b9d31-a8d0-44a9-b91a-aac8e6c03d4b"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-2a8b9d31-a8d0-44a9-b91a-aac8e6c03d4b"
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="2a8b9d31-a8d0-44a9-b91a-aac8e6c03d4b"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-2a8b9d31-a8d0-44a9-b91a-aac8e6c03d4b"
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
